<resources>

    <string name="app_name" translatable="false">Pony OC: Avatar Creator</string>


    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">SETTING</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">NEXT</string>
    <string name="language">LANGUAGE</string>

    <string name="title_1">EXPLORE THE SCENE AND SEARCH FOR \nHIDDEN OBJECTS</string>
    <string name="title_2">UPGRADE YOUR SKILLS TO INCREASE YOUR \nGOLD MINING SPEED</string>
    <string name="title_3">UNLOCK AND MAKE FRIENDS WITH \nADORABLE FELINE COMPANIONS</string>

    <string name="permission">PERMISSION</string>
    <string name="storage">STORAGE</string>
    <string name="continue_per">Continue</string>
    <string name="notification">NOTIFICATION</string>
    <string name="no_internet">No Internet</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">RATE US</string>
    <string name="share_app">SHARE APP</string>
    <string name="privacy_policy"><![CDATA[PRIVACY & POLICY]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no!</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no!</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no!</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too!</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too!</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">EXIT</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">SHARE</string>
    <string name="delete">DELETE</string>
    <string name="download">DOWNLOAD</string>
    <string name="yes">YES</string>
    <string name="no">NOT NOW</string>
    <string name="ok">Ok</string>
    <string name="wait_a_minute">PLEASE WAIT A MOMENT</string>
    <string name="reset">RESET</string>
    <string name="download_success">Download successful to the Pony OC: Avatar Creator album</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error occurred, please try again later.</string>
    <string name="image_has_been_saved_successfully">The project has been saved successfully!</string>
    <string name="save">SAVE</string>
    <string name="are_you_sure_want_to_delete_this_item">DO YOU WANT TO DELETE?</string>
    <string name="downloading">Downloading...</string>
    <string name="successfully">Successfully</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="save_failed_please_try_again">Save failed, please try again!</string>
    <string name="delete_failed_please_try_again">Delete failed, please try again!</string>
    <string name="my_creation">MY CREATION</string>
    <string name="delete_your_customize">Delete your customize</string>
    <string name="are_you_sure_you_want_to_delete_the_image">Are you sure you want to delete the image?</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, are you sure to exit?</string>
    <string name="change_your_whole_design_are_you_sure">DO YOU WANT TO RESET?</string>
    <string name="character_maker">Pixel Maker</string>
    <string name="no_item_here">No Item Here</string>
    <string name="quick_maker">Quick Maker</string>
    <string name="my_character">My Pixel</string>
    <string name="category">Pixel Maker</string>

    <string name="add_to_whatsapp">Add to Whatsapp</string>
    <string name="add_to_telegram">Add to Telegram</string>
    <string name="my_avatar">My Avatar</string>
    <string name="my_design">DESIGN</string>
    <string name="my_album">My album</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="background">Background</string>
    <string name="image">IMAGE</string>
    <string name="color">COLOR</string>
    <string name="add_image">Add Image</string>
    <string name="sticker">Sticker</string>
    <string name="speech_bubbles">Speech Bubbles</string>
    <string name="text">Input text</string>
    <string name="type_your_content">Type your content...</string>
    <string name="font">Font</string>
    <string name="choose_color">PICK COLOR</string>
    <string name="done">DONE</string>
    <string name="null_edt">Please enter text</string>
    <string name="input_text">Input text</string>
    <string name="hello_world">Type your content...</string>
    <string name="loading">LOADING...</string>
    <string name="internet_required_for_more_characters">Internet required for more characters</string>
    <string name="my_work">My Work</string>
    <string name="do_you_want_to_exit">THE CHARACTER HASN\'T BEEN SAVED, CAN YOU STILL EXIT?</string>
    <string name="generate">Generate Random</string>
    <string name="play">PONY \nMAKER</string>
    <string name="tv_cosplay">PONY \nCOSPLAY</string>
    <string name="random">LUCKY \nROLL</string>
    <string name="creation">MY \nCREATION</string>
    <string name="back">BACK</string>
    <string name="hello_world_hint">Hello World !!</string>
    <string name="character">CHARACTER</string>
    <string name="edit">EDIT</string>
    <string name="click_the_random_button_below_to_see_what_your_character_is">Click the random button below to see what your character is!</string>
    <string name="next_intro">NEXT</string>
    <string name="color_text">Color</string>
    <string name="playcos">PLAY</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="guide_cosplay">Players receive a random reference image and must recreate the character by choosing matching hairstyles, outfits, colors, and accessories. Each correct choice increases the percentage score—the closer the character matches the image, the higher the final score.</string>
    <string name="stop">STOP</string>
    <string name="music">MUSIC</string>
    <string name="effect">EFFECT</string>
    <string name="pony">PONY</string>
    <string name="sound">SOUND</string>
    <string name="shop">SHOP</string>
    <string name="contact">CONTACTS</string>
    <string name="what_ads">WHAT ADS</string>
    <string name="ads_click">WATCH ADS TO DOUBLE YOUR CLICK SPEED AND EARN COINS IN 30 SECONDS</string>
    <string name="ads_second">WATCH ADS TO DOUBLE YOUR COIN MINING SPEED FOR 30 SECONDS</string>
    <string name="selected">SELECTED</string>
    <string name="choose">CHOOSE</string>
</resources>