<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:clipChildren="false"
    tools:context="com.temppp.ui.SettingsActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_bottom"
        app:layout_constraintTop_toTopOf="@id/btnClose" />


    <TextView
        android:id="@+id/imgSetting"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/image_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnClose"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.temppp.core.custom.text.DoubleStrokeTextView
        android:id="@+id/tvSetting"
        style="@style/single_marquee"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:elevation="1dp"
        android:fontFamily="@font/cherry_bomb_regular"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="#7FC0FF"
        android:textSize="32sp"
        app:innerStrokeColor="@color/white"
        app:innerStrokeWidth="3dp"
        app:layout_constraintDimensionRatio="164:40"
        app:layout_constraintStart_toEndOf="@id/imgSetting"
        app:layout_constraintTop_toTopOf="@id/btnClose"
        app:outerStrokeColor="#00407F"
        app:outerStrokeWidth="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgSetting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="48dp">

            <!--  Music  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="0">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_music" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center_vertical"
                    android:text="@string/music"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnMusic"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_sw_on"
                    android:visibility="visible" />
            </LinearLayout>

            <!--  Sound  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="0">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_sound" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center_vertical"
                    android:text="@string/sound"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnSound"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_sw_off"
                    android:visibility="visible" />
            </LinearLayout>

            <!--  Language  -->
            <LinearLayout
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_lang_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/arrow"
                    android:visibility="gone" />
            </LinearLayout>

            <!--  Rate  -->
            <LinearLayout
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_rate_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center_vertical"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/arrow"
                    android:visibility="gone" />
            </LinearLayout>

            <!--  Share  -->
            <LinearLayout
                android:id="@+id/btnShareApp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_share_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/arrow"
                    android:visibility="gone" />
            </LinearLayout>

            <!--  Policy  -->
            <LinearLayout
                android:id="@+id/btnPolicy"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_policy_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/arrow"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
